--- a/src/Extensions/Banshee.SoundMenu/Makefile.am
+++ b/src/Extensions/Banshee.SoundMenu/Makefile.am
@@ -1,13 +1,6 @@
-if EXTERNAL_NOTIFY_SHARP
-REF_NOTIFY_SHARP_LIBS = $(NOTIFY_SHARP_LIBS)
-else
-MCS_FLAGS+="-define:INTERNAL_NOTIFY_SHARP"
-REF_NOTIFY_SHARP_LIBS = $(LINK_EXTENSION_NOTIFICATIONAREA)
-endif
-
 ASSEMBLY = Banshee.SoundMenu
 TARGET = library
-LINK = $(REF_EXTENSION_SOUNDMENU) $(REF_NOTIFY_SHARP_LIBS)
+LINK = $(REF_EXTENSION_SOUNDMENU)
 INSTALL_DIR = $(EXTENSIONS_INSTALL_DIR)
 
 SOURCES =  \
