--- a/src/Extensions/Banshee.NotificationArea/Makefile.am
+++ b/src/Extensions/Banshee.NotificationArea/Makefile.am
@@ -1,13 +1,6 @@
-if EXTERNAL_NOTIFY_SHARP
-NOTIFY_SHARP_LIBS = $(NOTIFY_SHARP_LIBS)
-else
-MCS_FLAGS+="-define:INTERNAL_NOTIFY_SHARP"
-NOTIFY_SHARP_LIBS = 
-endif
-
 ASSEMBLY = Banshee.NotificationArea
 TARGET = library
-LINK = $(REF_EXTENSION_NOTIFICATIONAREA) $(NOTIFY_SHARP_LIBS)
+LINK = $(REF_EXTENSION_NOTIFICATIONAREA)
 INSTALL_DIR = $(EXTENSIONS_INSTALL_DIR)
 
 SOURCES =  \
